[package]
name = "utils"
version = "1.18.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "Utilities for maintaining tiger-lib"
homepage = "https://github.com/amtep/tiger"
repository = "https://github.com/amtep/tiger"
readme = "../README.md"
rust-version = "1.88"
publish = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
encoding_rs = "0.8.35"
encoding_rs_rw = "0.4.2"
strum_macros = "0.27"

[lints]
workspace = true
